--- a/documentation/en/default-curio-config.toml
+++ b/documentation/en/default-curio-config.toml
@@ -1,5 +1,5 @@
 [Subsystems]
-  # EnableWindowPost enables window post to be executed on this lotus-provider instance. Each machine in the cluster
+  # EnableWindowPost enables window post to be executed on this curio instance. Each machine in the cluster
   # with WindowPoSt enabled will also participate in the window post scheduler. It is possible to have multiple
   # machines with WindowPoSt enabled which will provide redundancy, and in case of multiple partitions per deadline,
   # will allow for parallel processing of partitions.
@@ -14,7 +14,7 @@
   # type: int
   #WindowPostMaxTasks = 0
 
-  # EnableWinningPost enables winning post to be executed on this lotus-provider instance.
+  # EnableWinningPost enables winning post to be executed on this curio instance.
   # Each machine in the cluster with WinningPoSt enabled will also participate in the winning post scheduler.
   # It is possible to mix machines with WindowPoSt and WinningPoSt enabled, for details see the EnableWindowPost
   # documentation.
@@ -93,7 +93,7 @@
   #FinalizeMaxTasks = 0
 
   # EnableSendPrecommitMsg enables the sending of precommit messages to the chain
-  # from this lotus-provider instance.
+  # from this curio instance.
   # This runs after SDRTrees and uses the output CommD / CommR (roots of TreeD / TreeR) for the message
   #
   # type: bool
@@ -118,12 +118,12 @@
   #PoRepProofMaxTasks = 0
 
   # EnableSendCommitMsg enables the sending of commit messages to the chain
-  # from this lotus-provider instance.
+  # from this curio instance.
   #
   # type: bool
   #EnableSendCommitMsg = false
 
-  # EnableMoveStorage enables the move-into-long-term-storage task to run on this lotus-provider instance.
+  # EnableMoveStorage enables the move-into-long-term-storage task to run on this curio instance.
   # This tasks should only be enabled on nodes with long-term storage.
   # 
   # The MoveStorage task is the last task in the sealing pipeline. It moves the sealed sector data from the
@@ -139,7 +139,7 @@
   # type: int
   #MoveStorageMaxTasks = 0
 
-  # EnableWebGui enables the web GUI on this lotus-provider instance. The UI has minimal local overhead, but it should
+  # EnableWebGui enables the web GUI on this curio instance. The UI has minimal local overhead, but it should
   # only need to be run on a single machine in the cluster.
   #
   # type: bool
