--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,48 +78,48 @@ jobs:
               "itest-wdpost": ["self-hosted", "linux", "x64", "2xlarge"],
               "unit-storage": ["self-hosted", "linux", "x64", "2xlarge"],
 
-              "itest-batch_deal": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-cli": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-deals_512mb": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-deals_anycid": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-deals_invalid_utf8_label": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-deals_max_staging_deals": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-deals_partial_retrieval": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-deals_publish": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-deals_remote_retrieval": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-decode_params": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-dup_mpool_messages": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-eth_account_abstraction": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-eth_api": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-eth_balance": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-eth_bytecode": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-eth_config": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-eth_conformance": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-eth_deploy": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-eth_fee_history": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-eth_transactions": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-fevm_address": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-fevm_events": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-gas_estimation": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-get_messages_in_ts": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-lite_migration": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-lookup_robust_address": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-mempool": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-mpool_msg_uuid": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-mpool_push_with_uuid": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-msgindex": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-multisig": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-net": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-nonce": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-path_detach_redeclare": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-pending_deal_allocation": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-remove_verifreg_datacap": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-sector_miner_collateral": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-sector_numassign": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-self_sent_txn": ["self-hosted", "linux", "x64", "xlarge"],
-              "itest-verifreg": ["self-hosted", "linux", "x64", "xlarge"],
-              "multicore-sdr": ["self-hosted", "linux", "x64", "xlarge"],
-              "unit-node": ["self-hosted", "linux", "x64", "xlarge"]
+              "conformance": ["self-hosted", "linux", "x64", "large"],
+              "itest-batch_deal": ["self-hosted", "linux", "x64", "large"],
+              "itest-cli": ["self-hosted", "linux", "x64", "large"],
+              "itest-deals_512mb": ["self-hosted", "linux", "x64", "large"],
+              "itest-deals_anycid": ["self-hosted", "linux", "x64", "large"],
+              "itest-deals_invalid_utf8_label": ["self-hosted", "linux", "x64", "large"],
+              "itest-deals_max_staging_deals": ["self-hosted", "linux", "x64", "large"],
+              "itest-deals_offline": ["self-hosted", "linux", "x64", "large"],
+              "itest-deals_partial_retrieval": ["self-hosted", "linux", "x64", "large"],
+              "itest-deals_power": ["self-hosted", "linux", "x64", "large"],
+              "itest-deals_publish": ["self-hosted", "linux", "x64", "large"],
+              "itest-deals_remote_retrieval": ["self-hosted", "linux", "x64", "large"],
+              "itest-deals_retry_deal_no_funds": ["self-hosted", "linux", "x64", "large"],
+              "itest-decode_params": ["self-hosted", "linux", "x64", "large"],
+              "itest-dup_mpool_messages": ["self-hosted", "linux", "x64", "large"],
+              "itest-eth_account_abstraction": ["self-hosted", "linux", "x64", "large"],
+              "itest-eth_api": ["self-hosted", "linux", "x64", "large"],
+              "itest-eth_balance": ["self-hosted", "linux", "x64", "large"],
+              "itest-eth_bytecode": ["self-hosted", "linux", "x64", "large"],
+              "itest-eth_config": ["self-hosted", "linux", "x64", "large"],
+              "itest-eth_conformance": ["self-hosted", "linux", "x64", "large"],
+              "itest-eth_deploy": ["self-hosted", "linux", "x64", "large"],
+              "itest-eth_fee_history": ["self-hosted", "linux", "x64", "large"],
+              "itest-eth_filter": ["self-hosted", "linux", "x64", "large"],
+              "itest-eth_hash_lookup": ["self-hosted", "linux", "x64", "large"],
+              "itest-eth_transactions": ["self-hosted", "linux", "x64", "large"],
+              "itest-fevm_address": ["self-hosted", "linux", "x64", "large"],
+              "itest-fevm_events": ["self-hosted", "linux", "x64", "large"],
+              "itest-gas_estimation": ["self-hosted", "linux", "x64", "large"],
+              "itest-get_messages_in_ts": ["self-hosted", "linux", "x64", "large"],
+              "itest-lite_migration": ["self-hosted", "linux", "x64", "large"],
+              "itest-lookup_robust_address": ["self-hosted", "linux", "x64", "large"],
+              "itest-mempool": ["self-hosted", "linux", "x64", "large"],
+              "itest-mpool_msg_uuid": ["self-hosted", "linux", "x64", "large"],
+              "itest-mpool_push_with_uuid": ["self-hosted", "linux", "x64", "large"],
+              "itest-msgindex": ["self-hosted", "linux", "x64", "large"],
+              "itest-multisig": ["self-hosted", "linux", "x64", "large"],
+              "itest-nonce": ["self-hosted", "linux", "x64", "large"],
+              "itest-pending_deal_allocation": ["self-hosted", "linux", "x64", "large"],
+              "itest-remove_verifreg_datacap": ["self-hosted", "linux", "x64", "large"],
+              "itest-self_sent_txn": ["self-hosted", "linux", "x64", "large"],
+              "multicore-sdr": ["self-hosted", "linux", "x64", "large"]
             }
           # A list of test groups that require YugabyteDB to be running
           # In CircleCI, all jobs had yugabytedb running as a sidecar.
