--- a/documentation/en/default-curio-config.toml
+++ b/documentation/en/default-curio-config.toml
@@ -319,16 +319,24 @@
 
 
 [Ingest]
+  # Maximum number of sectors that can be queued waiting for deals to start processing.
+  # 0 = unlimited
+  # Note: This mechanism will delay taking deal data from markets, providing backpressure to the market subsystem.
+  # The DealSector queue includes deals which are ready to enter the sealing pipeline but are not yet part of it -
+  # size of this queue will also impact the maximum number of ParkPiece tasks which can run concurrently.
+  # DealSector queue is the first queue in the sealing pipeline, meaning that it should be used as the primary backpressure mechanism.
+  #
+  # type: int
+  #MaxQueueDealSector = 8
+
   # Maximum number of sectors that can be queued waiting for SDR to start processing.
   # 0 = unlimited
   # Note: This mechanism will delay taking deal data from markets, providing backpressure to the market subsystem.
-  # The SDR queue includes deals which are in the process of entering the sealing pipeline - size of this queue
-  # will also impact the maximum number of ParkPiece tasks which can run concurrently.
-  # 
-  # SDR queue is the first queue in the sealing pipeline, meaning that it should be used as the primary backpressure mechanism.
+  # The SDR queue includes deals which are in the process of entering the sealing pipeline. In case of the trees tasks it is
+  # possible that this queue grows more than this limit, the backpressure is only applied to sectors entering the pipeline.
   #
   # type: int
-  #MaxQueueSDR = 8
+  #MaxQueueSDR = 0
 
   # Maximum number of sectors that can be queued waiting for SDRTrees to start processing.
   # 0 = unlimited
@@ -347,6 +355,11 @@
   #
   # type: int
   #MaxQueuePoRep = 0
+
+  # Maximum time an open deal sector should wait for more deal before it starts sealing
+  #
+  # type: Duration
+  #MaxDealWaitTime = "1h0m0s"
 
 
 [Journal]
