--- a/documentation/en/default-curio-config.toml
+++ b/documentation/en/default-curio-config.toml
@@ -169,7 +169,7 @@
   # The address that should listen for Web GUI requests.
   #
   # type: string
-  #GuiAddress = ":4701"
+  #GuiAddress = "127.0.0.1:4701"
 
 
 [Fees]
