--- a/documentation/en/default-curio-config.toml
+++ b/documentation/en/default-curio-config.toml
@@ -366,7 +366,14 @@
 
 
 [Alerting]
-  # PageDutyIntegrationKey is the integration key for a pager duty service. You can find this unique service
+  # PagerDutyEventURL is URL for PagerDuty.com Events API v2 URL. Events sent to this API URL are ultimately
+  # routed to a PagerDuty.com service and processed.
+  # The default is sufficient for integration with the stock commercial PagerDuty.com company's service.
+  #
+  # type: string
+  #PagerDutyEventURL = "https://events.pagerduty.com/v2/enqueue"
+
+  # PageDutyIntegrationKey is the integration key for a PagerDuty.com service. You can find this unique service
   # identifier in the integration page for the service.
   #
   # type: string
@@ -377,25 +384,4 @@
   #
   # type: types.FIL
   #MinimumWalletBalance = "5 FIL"
-
-  [Alerting.PagerDutyEventURL]
-    #Scheme = "https"
-
-    #Opaque = ""
-
-    #Host = "events.pagerduty.com"
-
-    #Path = "/v2/enqueue"
-
-    #RawPath = ""
-
-    #OmitHost = false
-
-    #ForceQuery = false
-
-    #RawQuery = ""
-
-    #Fragment = ""
-
-    #RawFragment = ""
 
