--- a/documentation/en/default-curio-config.toml
+++ b/documentation/en/default-curio-config.toml
@@ -342,8 +342,9 @@
   # Maximum number of sectors that can be queued waiting for SDR to start processing.
   # 0 = unlimited
   # Note: This mechanism will delay taking deal data from markets, providing backpressure to the market subsystem.
-  # The SDR queue includes deals which are in the process of entering the sealing pipeline. In case of the trees tasks it is
-  # possible that this queue grows more than this limit, the backpressure is only applied to sectors entering the pipeline.
+  # The SDR queue includes deals which are in the process of entering the sealing pipeline. In case of the SDR tasks it is
+  # possible that this queue grows more than this limit(CC sectors), the backpressure is only applied to sectors
+  # entering the pipeline.
   #
   # type: int
   #MaxQueueSDR = 8
